nav bar completed

--- a/index.html
+++ b/index.html
@@ -2,10 +2,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Show up some navbar</title>
 </head>
 <body>
-    
+    <div class="nav-container">
+        <div class="logo">TALK OUT</div>
+        <input type="text" placeholder="search">
+        <ul>
+            <li>Home</li>
+            <li>About Us</li>
+            <li>Contact Us</li>
+        </ul>
+    </div>
 </body>
 </html>
