footer layout basic structure

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="index.css">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Show up some navbar</title>
+    <title>TALK</title>
 </head>
 <body>
     <div class="nav-container">
@@ -16,5 +16,36 @@
             <li>Contact Us</li>
         </ul>
     </div>
+
+
+
+    <footer class="footer-container">
+        <div class="icon1">
+            <div class="images">
+               <img src="icon.png" alt="image">
+            </div> 
+            <div class="images">
+                <img src="icon1.png" alt="image">
+            </div>
+        </div>
+         <div class="icon2">
+            <div class="images">
+              <img src="icon2.png" alt="image">  
+            </div>
+            <div class="images">
+                <img src="icon3.png" alt="image">
+            </div>
+            
+        </div>
+        <div class="icon3">
+            <div class="images">
+                <img src="icon4.png" alt="image">
+            </div>
+            <div class="images">
+               <img src="icon6.png" alt="image"> 
+            </div>
+            
+        </div>
+    </footer>
 </body>
 </html>
