adjustment of the body by spacing out words using land-heights,giving body good look by background color shape pictures with border-raduis to fix-up space and style,readjustment of the footer by including words to match icon function

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -6,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>TALK</title>
 </head>
+
 <body>
     <div class="nav-container">
         <div class="logo">TALK OUT</div>
@@ -17,35 +19,75 @@
         </ul>
     </div>
 
+    <section class="info">
+        <diV>
+            <p>Hi,<br>
+                My name is LOVERT AMIN, I am versatile and passionate software developer committed to development of
+                creative and innovative software solutions.
+                I code in HTML, CSS, SASS, JavaScript, React, Redux, and recently started learning Node.js.
+                I have also had some experience working with PHP, mostly using Laravel. I am hardworking, punctual,
+                love learning new technologies and I am available for hire, contact me at
+                <span>lovmomo700@gmail.com</span></p>
 
+        </diV>
+        <div>
+            <img src="LOVERT.jpg" alt="IMAGE">
+        </div>
+    </section>
 
     <footer class="footer-container">
-        <div class="icon1">
-            <div class="images">
-               <img src="icon.png" alt="image">
-            </div> 
-            <div class="images">
-                <img src="icon1.png" alt="image">
+        <div class="footer-top">
+            <P class="portfolio">WHAT ELSE CAN YOU ASK LOVERT ABOUT?</P>
+            <div class="icon1">
+                <div class="services1">
+                    <div class="images">
+                        <img src="icon.png" alt="image">
+                    </div>
+                    <p>SEO SERVICES</p>
+                </div>
+                <div class="services1">
+                    <div class="images">
+                        <img src="icon1.png" alt="image">
+                    </div>
+                    <p>WEB SCRAPPING</p>
+                </div>
+            </div>
+            <div class="icon2">
+                <div class="services2">
+                    <div class="images">
+                        <img src="icon2.png" alt="image">
+                    </div>
+                    <P>GOOGLE ADS</P>
+                </div>
+                <div class="services2">
+                    <div class="images">
+                        <img src="icon3.png" alt="image">
+                    </div>
+                    <p>LOGO DESIGN</p>
+                </div>
+            </div>
+
+            <div class="icon3">
+                <div class="services3">
+                    <div class="images">
+                        <img src="icon4.png" alt="image">
+                    </div>
+                    <P>DROP SHIPPING</P>
+                </div>
+                <div class="services3">
+                    <div class="images">
+                        <img src="icon6.png" alt="image">
+                    </div>
+                    <P>E-COMMERCE</P>
+                </div>
             </div>
         </div>
-         <div class="icon2">
-            <div class="images">
-              <img src="icon2.png" alt="image">  
-            </div>
-            <div class="images">
-                <img src="icon3.png" alt="image">
-            </div>
-            
-        </div>
-        <div class="icon3">
-            <div class="images">
-                <img src="icon4.png" alt="image">
-            </div>
-            <div class="images">
-               <img src="icon6.png" alt="image"> 
-            </div>
-            
+
+        <div class="footer-bottom">
+            &copy copywright 2019
         </div>
     </footer>
+
 </body>
+
 </html>
