adjusted footer and insert projecty

--- a/index.html
+++ b/index.html
@@ -30,11 +30,14 @@
                 <span>lovmomo700@gmail.com</span></p>
 
         </diV>
+       
         <div>
             <img src="LOVERT.jpg" alt="IMAGE">
         </div>
     </section>
-
+ <div class="project">
+            <img src="project.png" alt="image">
+        </div>
     <footer class="footer-container">
         <div class="footer-top">
             <P class="portfolio">WHAT ELSE CAN YOU ASK LOVERT ABOUT?</P>
