--- a/index.html
+++ b/index.html
@@ -35,9 +35,12 @@
             <img src="LOVERT.jpg" alt="IMAGE">
         </div>
     </section>
- <div class="project">
-            <img src="project.png" alt="image">
+    <div class="project">
+        <div>
+            <img src="project.png" alt="project">
         </div>
+    </div>
+ 
     <footer class="footer-container">
         <div class="footer-top">
             <P class="portfolio">WHAT ELSE CAN YOU ASK LOVERT ABOUT?</P>
