removing search bar from the navbar replacing with Lovert-Web Developer, readjustment of the li

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="nav-container">
         <div class="logo">TALK OUT</div>
-        <input type="text" placeholder="search">
+        <p>Lovert-Web Developer</p>
         <ul>
             <li>Home</li>
             <li>About Us</li>
@@ -90,7 +90,7 @@
         </div>
 
         <div class="footer-bottom">
-            &copy copywright 2019
+            &copy copywright Lovert 2019
         </div>
     </footer>
 
